descriptive commit message

--- a/answers/files/1.2/index.html
+++ b/answers/files/1.2/index.html
@@ -2,7 +2,9 @@
 <html>
   <body>
     <script>
-      alert(message)
+      let massage;
+      massage = 'Hi';
+      alert(massage); // Не была определена переменная
     </script>
   </body>
 </html>
