descriptive commit message

--- a/answers/files/1.7/index.html
+++ b/answers/files/1.7/index.html
@@ -3,9 +3,9 @@
   <body>
     <script>
       const color_blue = "#00F"; // не будет ошибкой,
-      const COLOR_RED = "#F00"; // но правилом хорошего тона будет являться использование верхнего регистра
-      // Для констант, которые «жёстко закодированы». Или, другими словами,
-      // когда значение известно до выполнения скрипта и записывается непосредственно в код.
+      const COLOR_RED = "#F00"; // которые «жёстко закодированы» или, другими словами,
+      // когда значение известно до выполнения скрипта и записывается непосредственно в код
+      const pageLoadTime = // записываются как обычные переменные
     </script>
   </body>
 </html>
