--- a/answers/files/1.8/index.html
+++ b/answers/files/1.8/index.html
@@ -2,7 +2,22 @@
 <html>
   <body>
     <script>
+      // Обратные кавычки имеют расширенный функционал, мы можем в них вставлять выражения с переменными
+      let textHi = "Привет!";
+      let textAll = `${textHi} Я сообщение!`;
 
+      console.log(textAll);
+
+      // Всё, что заключено в любые кавычки является строкой и будет иметь тип данных string
+      let text = `Hello World`;
+
+      console.log(text);
+
+      // Так же обратные кавычки имеют функцию переноса строк
+      let textNext = `Hello
+World`;
+
+      console.log(textNext);
     </script>
   </body>
 </html>
