descriptive commit message

--- a/answers/files/1.15/index.html
+++ b/answers/files/1.15/index.html
@@ -8,9 +8,10 @@
      console.log(amount);
 
      // применяем бинарный операнд
+     const x = 7;
+     cy = 12;
      let amount = x - y;
-     x = 7;
-     y = 12;
+
      console.log(amount);
 
     </script>
