--- a/answers/files/1.9/index.html
+++ b/answers/files/1.9/index.html
@@ -4,8 +4,8 @@
     <script>
       let firstName = "Jhon";
       let lastName = "Smith";
-      alert( `Привет, ${firstName + " " + lastName}` );
-      // alert( `Привет, ${firstName} ${lastName}` );
+      // alert( `Привет, ${firstName + " " + lastName}` );
+      alert( `Привет, ${firstName} ${lastName}` );
     </script>
   </body>
 </html>
